# python_project_template

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  setup.py
calculation/: index.html
docs/: calculation.md  project.md
my_project/: __init__.py  version.py
my_project/src/: calculator.py
my_project/tests/: conftest.py
project/: index.html
project/src copy/: calculator.py
project/tests/: conftest.py  test_calculator.py
