
# Project-wide configuration file, can be used for package metadata and other toll configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
# Local usage: pip install pre-commit, pre-commit run --all-files

[metadata]
name = proejct
author = wonchul
author_email = onedang22@gmail.com
license_files = LICENSE 
description_file = README.md 

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=30
    --color=yes

[coverage:run]
source = project/src/
data_file = project/tests/.coverage
# omit =
#     project/utils/callbacks/*